1.9.01 2006-xxxxx

    - Claudio Fontana: new complete build system, compatible with GNU
      policies (as described in the GNU coding standards, and
      technically also discussed in the autoconf, make and automake
      manuals).

      also added script scripts/autogen.sh



1.9.00 2006-03-03

     #####################################################################
     #                                                                   #
     #  unstable version 1.9 (main trunk at CVS savannah.gnu.org)        #
     #                                                                   #
     #####################################################################

    - merged changes from branch gama-1-8 (cvs update -j gama-1-8)

    - fixed a bug in SparseMatrixGraph<Float>::connected(); the case
      of a graph with no observations was not handled

    - updated version of review.ru.lang by  Anton Horpynich



1.8.01 2006-xx-xx

    - added XML adjustment output for gama-local networks

    - added new attribute 'epoch' in gama-local networks

    - fixed a bug in SparseMatrixGraph<Float>::connected(); the case
      of a graph with no observations was not handled

    - updated xml/lang/ru/review.ru.lang



1.8.00 2005-12-28

     #####################################################################
     #                                                                   #
     #  stable version 1.8  (branch gama-1-8-00 at cvs.sv.gnu.org)       #
     #                                                                   #
     #####################################################################



    ------------------------------------------------------------------------

    - Anton Horpynich <anton@vingeo.com> translated gama-local *.lang
      files to Ukraininan

    - Anton Horpynich revied Russian translation of *.lang files

    - added first draft of template class SparseMatrixGraph (this